2012-06-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/*.tcl:      [Bug 3534137]: $tcl_platform(platform) !=
	[tk windowingsystem]

2012-06-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:   Implement TkCygwinMainEx for loading
	* generic/tkWindow.c: Cygwin's Tk_MainEx from the Tk dll.

2012-06-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XChangeWindowAttributes signature and
	* generic/tkIntXlibDeclsDecls.h: many others to match Xorg, needed for Cygwin.

2012-06-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/Makefile.in:      [Bug 3532186] pkgIndex.tcl file complexity
	* win/Makefile.in:

2012-06-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XSetDashes signature and many others
	* generic/tkIntDecls.h:  to match Xorg, needed for Cygwin.
	* generic/tkIntXlibDeclsDecls.h
	* win/Makefile.in:       Generate same pkgIndex.tcl file for win32 and
	* unix/Makefile.in:      cygwin, one that is equally useable for both.

2012-05-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkWindow.c:    Simpify determination whether we are running on cygwin.
	* generic/tkStubInit.c:  Export Tk_GetHINSTANCE, TkSetPixmapColormap and
	* generic/tkInt.decls: 	 TkpPrintWindowId on the Cygwin dll, sync stub table
	with Tk 8.6 win32 version.
	* generic/tk*Decls.h:    re-generated
	* win/Makefile.in:       Fix "make genstubs" when cross-compiling on UNIX

2012-05-28  Francois Vogel  <fvogelnew1@free.fr>

	* doc/text.n:  [Bug 1630251]: Documentation for -endline option was wrong

2012-05-28  Francois Vogel  <fvogelnew1@free.fr>

	* generic/tkTextDisp.c:    [Bug 1630254]: missing scrolling of text widget
	when from a -startline == -endline initial state it is configured to display
	a non-empty part of it

2012-05-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/stubs.c:          Change XSetCommand signature to match Xorg,
	* win/tkWinWm.c:        needed for Cygwin.
	* generic/tkInt.decls